(Format: Year/Month/Day)
Changes for 0.9.6:
*03/10/05:
  * Fix frame size when changing titlebar size (Simon)
    - also send configure notify when toggling decorations
    FbWinFrame.hh/cc Window.cc
  * Move a bunch of functionality from Keys into FbTk::KeyUtil (Simon)
    - also fix issue where Capslock mod was taken to be whatever caps
      key was mapped to (why??). Now uses LockMask (ditto num,scroll).
    Keys.hh/cc KeyUtil.hh/cc TextBox.cc fluxbox.cc
  * Fix reading of auto raise delay (Simon)
    fluxbox.hh/cc Screen.cc Timer.hh/cc
  * Make focusLast work for sloppy focus when changing workspace or
    closing a window (Simon)
    - also generalises event redirects (e.g. for window moving)
    fluxbox.hh/cc Window.hh/cc Screen.cc
*03/10/04:
  * Fix NLS bad message errors by adding explicit codeset entries (Simon)
    - thanks to Matt Hope for pointing us to the recent workaround from 
      blackbox (and thanks to Matt Kraai who contrib-d to Blackbox)
    - also clean up the Makefiles so they are more generalised
    nls/*/Makefile.am nls/convert.awk
*03/10/02:
  * Fix couple of memory leaks and uninitialised uses shown up with 
    valgrind (Simon)
    EventManager.cc TextureRender.cc Gnome.cc Screen.cc Window.cc 
    WinClient.cc Xutil.cc main.cc
  * Make grips children of handle (Simon)
    - Fixes parentrelative grip texture
    FbWinFrame.hh/cc
  * Fix updating of window on focus change (Simon)
    FbWinFrame.cc
*03/09/29:
  * Fix aterm not updating on opaque move (Thanks Mathias Gumz)
    Window.cc
  * Fix resize calculations, particularly wrt base_width/height (Simon)
    - fixes abiword resize issues
    Window.hh/cc WinClient.hh/cc
  * Nearest-quadrant resizing (Thanks Uwe Maurer and Mathias Gumz)
    Window.hh/cc Screen.hh/cc FbWinFrameTheme.hh/cc
  * Update from Han 
   - make startup executable to save one process
   - make pixmaps-dir
   - use -a which falls back to -f for wallpapers(testing)
   - some code cleanups.